[FIX] overlay and cropper size ! to see innerwidth

--- a/src/app/counter/consumption-counter/consumption-counter.page.scss
+++ b/src/app/counter/consumption-counter/consumption-counter.page.scss
@@ -32,10 +32,10 @@ body, html {
   position: absolute;
   border: 1px solid #fff; // ou toute autre couleur
   background: transparent!important; // ou toute autre couleur
-  top: 100px;
-  left:50px;
+  top: 50px;
+  left:25px;
   width: 300px;
-  height:200px;
+  height:100px;
   z-index: 1;
 }
 .cameraPreview {
